--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="hintergrund">
-        <h1>Hallo</h1>
+        <h1>Velo</h1>
         <h2>Our time-series graphs map out the gap between human demand on nature (Ecological Footprint) <br> and nature’s capacity to meet that demand (biological capacity) for over 200 countries and regions from 1961. <br>
           A country is running an ecological deficit if its Ecological Footprint exceeds its biocapacity. <br> It has an ecological reserve if its biocapacity exceeds its Footprint.</h2>
       </div>
