--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <br>
 
       <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p>
-
+      <div id="grafik1"></div>
+      <div id="grafik1-ui"></div>
 
       <script src="js/sketch.js"></script>
       <script src="js\sketch_platzhalter.js"></script>
