--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
     <script src="js/p5.min.js"></script>
     <script src="js/p5.dom.min.js"></script>
     <script src="js/p5.sound.min.js"></script>
-    <script src="js\d3.v5.min.js"></script>
-    <script src="js\menu.js"></script>
+    <script src="js/d3.v5.min.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/p5.experience.js"></script>
+    <script src="js/p5.experience.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
   <body>
-    <br>
+      <br>
  <!-- Menübar -->
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -29,19 +31,20 @@
       </div>
 
       <div class="hintergrund">
-        <h1>Velo</h1>
-        <h2>Our time-series graphs map out the gap between human demand on nature (Ecological Footprint) <br> and nature’s capacity to meet that demand (biological capacity) for over 200 countries and regions from 1961. <br>
-          A country is running an ecological deficit if its Ecological Footprint exceeds its biocapacity. <br> It has an ecological reserve if its biocapacity exceeds its Footprint.</h2>
+        <h1>A SAD STORY ABOUT PLASTIC</h1>
+        <h2>How much plastic and waste do we produce? <br> In 1950 the world produced only 2 million tonnes per year. <br> By 2015, annual production had increased nearly 200-fold, reaching 381 million tonnes. <br>
+        For context, this is roughly equivalent to the mass of two-thirds of the world population. <br> Over the period from 1950 to 2015, cumulative production reached 7.8 billion tonnes of plastic, <br>
+         more than one tonne of plastic for every person alive today.</h2>
       </div>
 
       <br>
 
-      <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p>
+      <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
       <div id="grafik1"></div>
       <div id="grafik1-ui"></div>
 
       <script src="js/sketch.js"></script>
-      <script src="js\sketch_platzhalter.js"></script>
+      <!-- <script src="js/sketch_platzhalter.js"></script> -->
 
 
 
