--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="hintergrund">
-        <h1>A SAD STORY ABOUT PLASTIC</h1>
+        <h1>PLASTIC, PLASTIC, PLASTIC</h1>
         <h2>How much plastic and waste do we produce? <br> In 1950 the world produced only 2 million tonnes per year. <br> By 2015, annual production had increased nearly 200-fold, reaching 381 million tonnes. <br>
         For context, this is roughly equivalent to the mass of two-thirds of the world population. <br> Over the period from 1950 to 2015, cumulative production reached 7.8 billion tonnes of plastic, <br>
          more than one tonne of plastic for every person alive today.</h2>
