--- a/daten.html
+++ b/daten.html
@@ -17,13 +17,14 @@
    <a href="about.html">ÜBER</a>
    <a href="daten.html">DATEN</a>
    <a href="impressum.html">IMPRESSUM</a>
+   <a href="fall2.html">FALL 2</a>
  </div>
  <!-- Menübar Ende-->
 
 
  <div id="main">
    <div class="header">
-     <a class="header-link"><img src="images/logo.png" height="70" width="70"></a>
+     <a class="header-link" href="index.html"><img src="images/logo.png" height="70" width="70"></a>
      <p class="opener"> <span style="font-size:25px;text-decoration:underline;cursor:pointer;margin-left:30px;display: inline-block" onclick="openNav()">MENÜ</span> </p>
        </div>
 
