--- a/fall2.html
+++ b/fall2.html
@@ -32,20 +32,14 @@
       </div>
 
       <div class="hintergrund">
-        <h1>PLASTIC, PLASTIC, PLASTIC</h1>
-        <h2>How much plastic and waste do we produce? <br> In 1950 the world produced only 2 million tonnes per year. <br> By 2015, annual production had increased nearly 200-fold, reaching 381 million tonnes. <br>
-        For context, this is roughly equivalent to the mass of two-thirds of the world population. <br> Over the period from 1950 to 2015, cumulative production reached 7.8 billion tonnes of plastic, <br>
-         more than one tonne of plastic for every person alive today.</h2>
+        <h1>Global mismanaged plastic by region, 2010</h1>
       </div>
 
       <br>
 
       <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
-      <div id="grafik1"></div>
-      <div id="grafik1-ui"></div>
-      <script src="js/sketch.js"></script>
+      <script src="js/fall2.js"></script>
       <br>
-      <!--   <script src="js/sketch_platzhalter.js"></script> -->
 
 
     <div class="footer">
