--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html><html><head>
-    <script src="js/p5.min.js"></script>
-    <script src="js/p5.dom.min.js"></script>
-    <script src="js/p5.sound.min.js"></script>
-    <script src="js/d3.v5.min.js"></script>
+
     <script src="js/menu.js"></script>
-    <script src="js/p5.experience.js"></script>
-    <script src="js/p5.experience.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -42,9 +38,20 @@
 
       <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
       <div id="grafik1"></div>
-      <div id="grafik1-ui"></div>
-      <script src="js/sketch.js"></script>
+      <script src="js/p5.min.js"></script>
+      <script src="js/p5.dom.min.js"></script>
+      <script src="js/p5.sound.min.js"></script>
+      <script src="js/d3.v5.min.js"></script>
+      <script src="js/p5.experience.js"></script>
+      <script src="js/p5.experience.min.js"></script>
+      <script src="js/sketch1.js"></script>
       <br>
+
+      <!-- <div id="grafik2"></div>
+      <script src="js/sketch2.js"></script> -->
+      <br>
+
+
       <!--   <script src="js/sketch_platzhalter.js"></script> -->
 
 
