--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <script src="js/p5.dom.min.js"></script>
       <script src="js/p5.sound.min.js"></script>
       <script src="js/d3.v5.min.js"></script>
-      <script src="js/p5.experience.js"></script>
-      <script src="js/p5.experience.min.js"></script>
+      <!-- <script src="js/p5.experience.js"></script>
+      <script src="js/p5.experience.min.js"></script> -->
       <script src="js/sketch1.js"></script>
       <br>
 
