--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <br>
 
       <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
-      <div id="grafik1"></div>
+      <!-- style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
+      <div id="grafik1" style="position: relative;"></div>
       <script src="js/p5.min.js"></script>
       <script src="js/p5.dom.min.js"></script>
       <script src="js/p5.sound.min.js"></script>
