--- a/fall2.html
+++ b/fall2.html
@@ -32,19 +32,18 @@
       </div>
 
       <div class="hintergrund">
-        <h1>Global mismanaged plastic by region, 2010</h1>
+        <h1>How much of global plastic is recycled?</h1>
       </div>
 
       <br>
 
       <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
       <script src="js/fall2.js"></script>
-      <br>
 
 
-    <div class="footer">
+    <!-- <div class="footer">
       <p>© Cindy Gabriella Kipfer-Zumtaugwald - Bachelorarbeit Multimedia Production 2019 HTW Chur</p>
-    </div>
+    </div> -->
 
 
 
