--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
    <a href="daten.html">DATEN</a>
    <a href="impressum.html">IMPRESSUM</a>
    <a href="fall2.html">FALL 2</a>
+   <a href="fall6.html">FALL 6</a>
  </div>
  <!-- Menübar Ende-->
 
