--- a/fall6.html
+++ b/fall6.html
@@ -33,13 +33,15 @@
       </div>
 
       <div class="hintergrund">
-        <h1>How much of global plastic is recycled?</h1>
+        <h1>Plastic waste generation per person, 2010</h1>
+        <p>Fall 6 - against conventions</p>
+        <p class="text">Daily plastic waste generation per person, measured in kilograms per person per day. This measures the overall per
+capita plastic waste generation rate prior to waste management, recycling or incineration. It does not therefore directly
+indicate the risk of pollution to waterways or marine environments.</p>
       </div>
 
-      <br>
 
-      <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
-      <script src="js/fall2.js"></script>
+      <script src="js/fall6.js"></script>
 
 
     <!-- <div class="footer">
