--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="js/p5.dom.min.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/d3.v5.min.js"></script>
+  <!--<script src="js/p5.experience.js"></script>
+  <script src="js/p5.experience.min.js"></script>-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -39,11 +41,9 @@
 
     <div class="hintergrund">
       <h1>PLASTIC, PLASTIC, PLASTIC</h1>
-      <h2>How much plastic and waste do we produce? <br> In 1950 the world produced only 2 million tonnes per year. <br>
-        By 2015, annual production had increased nearly 200-fold, reaching 381 million tonnes. <br>
-        For context, this is roughly equivalent to the mass of two-thirds of the world population. <br> Over the period
-        from 1950 to 2015, cumulative production reached 7.8 billion tonnes of plastic, <br>
-        more than one tonne of plastic for every person alive today.</h2>
+      <h2>Wie viel Plastik und Abfall produzieren wir? </h2>
+      <p class="text">Waren es 1950 noch «lediglich» weltweit 2 Millionen Tonnen/Jahr, ist die jährliche Produktion 2015 mit 381 Millionen Tonnen/Jahr bereits um das fast 200-fache gestiegen. Dies entspricht etwa der Masse von 2/3 der Weltbevölkerung. Zwischen 1950 – 2015 hat die kumulative Produktion 7.8 Billionen Tonnen Plastik erreicht, mehr als eine Tonne pro lebende Person.</p>
+
     </div>
 
     <br>
@@ -52,10 +52,16 @@
     <!-- style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
     <div id="grafik1" style="position: relative;"></div>
     <script src="js/sketch1.js"></script>
-    <br>
+    <br><br>
 
+    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED?</h1></div>
     <div id="grafik2"></div>
-    <script src="js/sketch2.js"></script>
+    <script src="js/fall2.js"></script>
+    <br><br>
+
+    <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010</h1></div>
+    <div id="grafik6"></div>
+    <script src="js/fall6.js"></script>
     <br>
 
     <!--   <script src="js/sketch_platzhalter.js"></script> -->
