--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="js/p5.dom.min.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/d3.v5.min.js"></script>
+  <script src="js/textures.js"></script>
+  <script src="js/test_struc.js"></script>
   <!--<script src="js/p5.experience.js"></script>
   <script src="js/p5.experience.min.js"></script>-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -38,6 +40,7 @@
           style="font-size:25px;text-decoration:underline;cursor:pointer;margin-left:30px;display: inline-block"
           onclick="openNav()">MENÜ</span> </p>
     </div>
+
 
     <div class="hintergrund">
       <h1>PLASTIC, PLASTIC, PLASTIC</h1>
