--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <script src="js/sketch1.js"></script>
     <br><br>
 
-    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED?</h1></div>
+    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2"></div>
     <script src="js/fall2.js"></script>
     <br><br>
