--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
     <script src="js/fall2.js"></script>
     <br><br>
 
+    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
+    <div id="grafik2_test"></div>
+    <script src="js/fall2_test.js"></script>
+    <br><br>
+
     <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010</h1></div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script>
