--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
     <!-- style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
     <div id="grafik1" style="position: relative;"></div>
-    <script src="js/sketch1.js"></script>
+    <script src="js/fall1.js"></script>
     <br><br>
 
     <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
