--- a/index.html
+++ b/index.html
@@ -67,10 +67,18 @@
     <script src="js/fall2_test.js"></script>
     <br><br>
 
-    <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010</h1></div>
+    <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
+    <div id="grafik3"></div>
+    <script src="js/fall3.js"></script>
+    <br>
+
+    <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script>
     <br>
+
+
+
 
     <!--   <script src="js/sketch_platzhalter.js"></script> -->
 
