--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="js/menu.js"></script>
   <script src="js/p5.min.js"></script>
   <script src="js/p5.dom.min.js"></script>
-  <script src="js/p5.sound.min.js"></script>
+  <!-- <script src="js/p5.sound.min.js"></script> -->
   <script src="js/d3.v5.min.js"></script>
   <script src="js/textures.js"></script>
   <script src="js/test_struc.js"></script>
