comment test_struc.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- <script src="js/p5.sound.min.js"></script> -->
   <script src="js/d3.v5.min.js"></script>
   <!-- <script src="js/textures.js"></script> -->
-  <script src="js/test_struc.js"></script>
+  <!-- <script src="js/test_struc.js"></script> -->
   <!--<script src="js/p5.experience.js"></script>
   <script src="js/p5.experience.min.js"></script>-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
