make other charts visible

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
 
     <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
     <!-- style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
-    <!-- <div id="grafik1" style="position: relative;"></div>
+    <div id="grafik1" style="position: relative;"></div>
     <script src="js/fall1.js"></script>
     <br><br>
 
     <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2"></div>
     <script src="js/fall2.js"></script>
-    <br><br> -->
+    <br><br>
 
-    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
+    <!-- <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2_test"></div>
     <script src="js/fall2_test.js"></script>
-    <br><br>
-<!-- 
+    <br><br> -->
+
     <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
     <script src="js/fall3.js"></script>
@@ -75,7 +75,7 @@
     <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script>
-    <br> -->
+    <br>
 
 
 
