make other charts visible

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
     <script src="js/fall2.js"></script>
     <br><br>
 
-    <!-- <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
+    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2_test"></div>
     <script src="js/fall2_test.js"></script>
-    <br><br> -->
+    <br><br>
 
     <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
     <script src="js/fall3.js"></script>
-    <br>
+    <br> 
 
     <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
