textures.js tests

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="js/p5.dom.min.js"></script>
   <!-- <script src="js/p5.sound.min.js"></script> -->
   <script src="js/d3.v5.min.js"></script>
-  <!-- <script src="js/textures.js"></script> -->
+  <script src="js/textures.js" charset="utf-8"></script>
+
   <!-- <script src="js/test_struc.js"></script> -->
   <!--<script src="js/p5.experience.js"></script>
   <script src="js/p5.experience.min.js"></script>-->
@@ -70,14 +71,12 @@
     <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
     <script src="js/fall3.js"></script>
-    <br> 
+    <br>
 
     <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script>
     <br>
-
-
 
 
     <!--   <script src="js/sketch_platzhalter.js"></script> -->
