neuer versuch mit textures.js

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
     <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
-    <script src="js/fall3.js"></script>
+    <svg width="225" height="150" id="grafik"> <circle cx="75" cy="75" r="75" id="kreis1"></circle></svg>
+    <script id="test" src="js/fall3.js"></script>
     <br>
 
     <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
