--- a/impressum.html
+++ b/impressum.html
@@ -33,11 +33,18 @@
 
        <div class="hintergrund">
          <h1>IMPRESSUM</h1>
-         <h2></h2>
+         <p class="text">Cindy Kipfer-Zumtaugwald <br>
+            3930 Visp/Wallis <br>
+            cindy_zumtaugwald@hotmail.com <br><br>
+            Bachelorstudiengang Multimedia Production/Media Engineering  <br><br>
+            HTW – Hochschule für Technik und Wirtschaft Chur <br>
+            BFH – Berner Fachhochschule<br>
+            IMP – Institut für Multimedia Production<br><br><br>
+            <img src="images/logo_HTW.png" style="width:400px;   margin-left: 30px;" > </img>
+</p>
        </div>
 
-       <script src="js/test_exp.js"></script>
-       <div align="Center" ; style="width:1200px;  margin:0 auto;" id="Exp"></div>
+
 
 
        <div class="footer">
