--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   <script src="js/p5.dom.min.js"></script>
   <!-- <script src="js/p5.sound.min.js"></script> -->
   <script src="js/d3.v5.min.js"></script>
-  <script src="js/textures.js" charset="utf-8"></script>
+  <script src="js/p5.scribble.js"></script>
 
-  <!-- <script src="js/test_struc.js"></script> -->
-  <!--<script src="js/p5.experience.js"></script>
-  <script src="js/p5.experience.min.js"></script>-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -70,7 +67,6 @@
 
     <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
-    <svg width="225" height="150" id="grafik"> <circle cx="75" cy="75" r="75" id="kreis1"></circle></svg>
     <script id="test" src="js/fall3.js"></script>
     <br>
 
