--- a/daten.html
+++ b/daten.html
@@ -6,7 +6,8 @@
     <script src="js\menu.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   </head>
   <body>
     <br>
@@ -27,10 +28,26 @@
      <p class="opener"> <span style="font-size:25px;text-decoration:underline;cursor:pointer;margin-left:30px;display: inline-block" onclick="openNav()">MENÜ</span> </p>
        </div>
 
+       <div class="hintergrund">
+         <h1>DATEN</h1></div>
+       <p class="text">Die verwendeten Daten stammen von «Our World in Data»:<br>
+        FAQs on Plastics (vgl. <a href="https://ourworldindata.org/faq-on-plastics" target="_blank">https://ourworldindata.org/faq-on-plastics)</a><br>
+        Plastic Pollution (vgl. <a href="https://ourworldindata.org/plastic-pollution" target="_blank">https://ourworldindata.org/plastic-pollution)</a><br><br>
 
-       <br>
+        Ferner diente der Blogeintrag «5 Ways Writers Use Misleading Graphs To Manipulate You [INFOGRAPHIC]» zur Inspiration<br>
+        (vgl. <a href="https://venngage.com/blog/misleading-graphs/" target="_blank">https://venngage.com/blog/misleading-graphs/</a>)<br><br><br>
 
-     <div>
+
+        Schriften:<br>
+        Roboto, Raleway (c) Google Fonts <br><br>
+        Technische Inputs:<br>
+        "Data manipulation in d3.js" (vgl. <a href="https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html" target="_blank">https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html</a>)<br>
+        "How TO - Side Navigation" w3schools (vgl. <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp" target="_blank">https://www.w3schools.com/howto/howto_js_sidenav.asp</a>)<br>
+        p5.js (vgl. <a href="https://p5js.org/" target="_blank">https://p5js.org/</a>)<br>
+
+
+        </p>
+
 
 
 
