--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
 </head>
 
@@ -39,7 +41,7 @@
 
 
     <div class="hintergrund">
-      <h1>PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
+      <h1>1 PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
       <h2>Wie viel Plastik und Abfall produzieren wir? </h2>
       <p class="text">Waren es 1950 noch «lediglich» weltweit 2 Millionen Tonnen/Jahr, ist die jährliche Produktion 2015 mit 381 Millionen Tonnen/Jahr bereits um das fast 200-fache gestiegen. Dies entspricht etwa der Masse von 2/3 der Weltbevölkerung. Zwischen 1950 – 2015 hat die kumulative Produktion 7.8 Billionen Tonnen Plastik erreicht, mehr als eine Tonne pro lebende Person.</p>
       <p class="text">Instruktionen: Bearbeiten Sie mit den Slidern jeweils die Skalen der Y-Achse und/oder der X-Achse. Die Aussagen der dargelegten Informationen ändern sich konstant.</p>
@@ -53,7 +55,7 @@
     <script src="js/fall1.js"></script>
     <br><br>
 
-    <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
+    <div class="hintergrund"><h1>2 HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2"></div>
     <script src="js/fall2.js"></script>
     <br><br>
@@ -63,17 +65,17 @@
     <script src="js/fall2_test.js"></script>
     <br><br> -->
 
-    <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
+    <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
     <script id="test" src="js/fall3.js"></script>
     <br>
 
-    <div class="hintergrund"><h1>SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1></div>
+    <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1></div>
     <div id="grafik5"></div>
     <script id="test" src="js/fall5.js"></script>
     <br>
 
-    <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
+    <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script>
     <br>
