--- a/impressum.html
+++ b/impressum.html
@@ -8,7 +8,8 @@
   <script src="js/p5.experience.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   </head>
   <body>
     <br>
