--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
     <script src="js/fall1.js"></script>
     <br><br> -->
 
-    <div class="hintergrund"><h1>2 HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
+    <!-- <div class="hintergrund"><h1>2 HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2"></div>
     <script src="js/fall2.js"></script>
-    <br><br>
+    <br><br> -->
 
     <!-- <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2_test"></div>
     <script src="js/fall2_test.js"></script>
     <br><br> -->
 
-    <!-- <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
+    <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
     <script id="test" src="js/fall3.js"></script>
-    <br> -->
+    <br>
 <!-- 
     <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1></div>
     <div id="grafik5"></div>
