test neuer daten fall2

--- a/daten.html
+++ b/daten.html
@@ -32,7 +32,9 @@
          <h1>DATEN</h1></div>
        <p class="text">Die verwendeten Daten stammen von «Our World in Data»:<br>
         FAQs on Plastics (vgl. <a href="https://ourworldindata.org/faq-on-plastics" target="_blank">https://ourworldindata.org/faq-on-plastics)</a><br>
-        Plastic Pollution (vgl. <a href="https://ourworldindata.org/plastic-pollution" target="_blank">https://ourworldindata.org/plastic-pollution)</a><br><br>
+        Plastic Pollution (vgl. <a href="https://ourworldindata.org/plastic-pollution" target="_blank">https://ourworldindata.org/plastic-pollution)</a><br>
+        CO₂ and other Greenhouse Gas Emissions (vgl. <a href="https://ourworldindata.org/co2-and-other-greenhouse-gas-emissions" target="_blank">https://ourworldindata.org/co2-and-other-greenhouse-gas-emissions)</a><br><br>
+
 
         Ferner diente der Blogeintrag «5 Ways Writers Use Misleading Graphs To Manipulate You [INFOGRAPHIC]» zur Inspiration<br>
         (vgl. <a href="https://venngage.com/blog/misleading-graphs/" target="_blank">https://venngage.com/blog/misleading-graphs/</a>)<br><br><br>
@@ -40,6 +42,19 @@
 
         Schriften:<br>
         Roboto, Raleway (c) Google Fonts <br><br>
+
+        Farben:<br>
+        Menü #F0FFF0<br>
+        Grafik 1 #96B396 <br>
+        Grafik 2 #9dc79d <br>
+        Grafik 3 #D8E5D8 <br>
+        Grafik 4 <br>
+        Grafik 5 <br>
+        Grafik 6 <br>
+
+        <br><br>
+
+
         Technische Inputs:<br>
         "Data manipulation in d3.js" (vgl. <a href="https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html" target="_blank">https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html</a>)<br>
         "How TO - Side Navigation" w3schools (vgl. <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp" target="_blank">https://www.w3schools.com/howto/howto_js_sidenav.asp</a>)<br>
