--- a/index.html
+++ b/index.html
@@ -46,19 +46,15 @@
       <p class="text">Waren es 1950 noch «lediglich» weltweit 2 Millionen Tonnen/Jahr, ist die jährliche Produktion 2015 mit 381 Millionen Tonnen/Jahr bereits um das fast 200-fache gestiegen. Dies entspricht etwa der Masse von 2/3 der Weltbevölkerung. Zwischen 1950 – 2015 hat die kumulative Produktion 7.8 Billionen Tonnen Plastik erreicht, mehr als eine Tonne pro lebende Person.</p>
       <p class="text">Instruktionen: Bearbeiten Sie mit den Slidern jeweils die Skalen der Y-Achse und/oder der X-Achse. Die Aussagen der dargelegten Informationen ändern sich konstant.</p>
     </div>
-
-    <br>
-
-    <!-- <p style="margin-left:30px;">Grafik 1 - Supply and Demand // Angebot und Nachfrage <br> Manipulation: verkürzte Y-Achsenwerte</p> -->
-    <!-- style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
-    <!-- <div id="grafik1" style="position: relative;"></div>
+    <!-- <style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
+    <div id="grafik1" style="position: relative;"></div>
     <script src="js/fall1.js"></script>
-    <br><br> -->
+    <br><br>
 
-    <!-- <div class="hintergrund"><h1>2 HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
+    <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2"></div>
-    <script src="js/fall2.js"></script>
-    <br><br> -->
+    <script src="js/fall2_temp.js"></script>
+    <br><br>
 
     <!-- <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2_test"></div>
@@ -69,19 +65,17 @@
     <div id="grafik3"></div>
     <script id="test" src="js/fall3.js"></script>
     <br>
-<!-- 
+
     <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1></div>
     <div id="grafik5"></div>
     <script id="test" src="js/fall5.js"></script>
-    <br> -->
+    <br>
 
-    <!-- <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
+    <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script>
-    <br> -->
+    <br>
 
-
-    <!--   <script src="js/sketch_platzhalter.js"></script> -->
 
 
     <div class="footer">
