onepage-scroll, layout updates

--- a/daten.html
+++ b/daten.html
@@ -45,6 +45,7 @@
 
         Farben:<br>
         Menü #F0FFF0<br>
+        Hintergrund #FFFAFA <br>
         Grafik 1 #96B396 <br>
         Grafik 2 #9dc79d <br>
         Grafik 3 #D8E5D8 <br>
