--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <script src="js/d3.v5.min.js"></script>
   <script src="js/p5.scribble.js"></script>
 
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/jquery.onepage-scroll.js"></script>
+  <script src="js/jquery.onepage-scroll.min.js"></script>
+
+
+  <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -18,7 +24,8 @@
 </head>
 
 <body>
-  <br>
+
+
   <!-- Menübar -->
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -38,8 +45,21 @@
           style="font-size:25px;text-decoration:underline;cursor:pointer;margin-left:30px;display: inline-block"
           onclick="openNav()">MENÜ</span> </p>
     </div>
+</div>
 
 
+  <div class="main">
+      <!-- INTRO -->
+    <section>
+    <div class="hintergrund">
+      <h1>0 HUMBOLDT - ODER DIE WOHL ERSTE INFOGRAFIK</h1>
+      <h2>1802</h2>
+      <img src="images/humboldt.jpg" width="800"></img>
+      <p class="text">Waren es 1950 noch «lediglich» weltweit 2 Millionen Tonnen/Jahr, ist die jährliche Produktion 2015 mit 381 Millionen Tonnen/Jahr bereits um das fast 200-fache gestiegen. Dies entspricht etwa der Masse von 2/3 der Weltbevölkerung. Zwischen 1950 – 2015 hat die kumulative Produktion 7.8 Billionen Tonnen Plastik erreicht, mehr als eine Tonne pro lebende Person.</p>
+    </div></section>
+
+      <!-- GRAFIK 1 -->
+    <section>
     <div class="hintergrund">
       <h1>1 PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
       <h2>Wie viel Plastik und Abfall produzieren wir? </h2>
@@ -48,41 +68,61 @@
     </div>
     <!-- <style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
     <div id="grafik1" style="position: relative;"></div>
-    <script src="js/fall1.js"></script>
-    <br><br>
+    <script src="js/fall1.js"></script></section>
 
+        <!-- GRAFIK 2 -->
+    <section>
     <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1></div>
     <div id="grafik2"></div>
-    <script src="js/fall2_temp.js"></script>
-    <br><br>
+    <script src="js/fall2_temp.js"></script></section>
 
-    <!-- <div class="hintergrund"><h1>HOW MUCH OF GLOBAL PLASTIC IS RECYCLED? - ACHSEN TAUSCHEN</h1></div>
-    <div id="grafik2_test"></div>
-    <script src="js/fall2_test.js"></script>
-    <br><br> -->
-
+        <!-- GRAFIK 3 -->
+    <section>
     <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
     <div id="grafik3"></div>
-    <script id="test" src="js/fall3.js"></script>
-    <br>
+    <script id="test" src="js/fall3.js"></script></section>
 
+      <!-- GRAFIK 5 -->
+    <section>
     <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1></div>
     <div id="grafik5"></div>
-    <script id="test" src="js/fall5.js"></script>
-    <br>
+    <script id="test" src="js/fall5.js"></script></section>
 
+      <!-- GRAFIK 6 -->
+    <section>
     <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
     <div id="grafik6"></div>
-    <script src="js/fall6.js"></script>
-    <br>
+    <script src="js/fall6.js"></script></section>
 
+  </div>
 
 
     <div class="footer">
       <p>© Cindy Gabriella Kipfer-Zumtaugwald - Bachelorarbeit Multimedia Production 2019 HTW Chur</p>
     </div>
 
-  </div>
+
+
+  <script>
+      $(".main").onepage_scroll({
+       sectionContainer: "section",
+       easing: "ease",                  // Easing options accepts the CSS3 easing animation such "ease", "linear", "ease-in",
+                                        // "ease-out", "ease-in-out", or even cubic bezier value such as "cubic-bezier(0.175, 0.885, 0.420, 1.310)"
+       animationTime: 700,             // AnimationTime let you define how long each section takes to animate
+       pagination: true,                // You can either show or hide the pagination. Toggle true for show, false for hide.
+       updateURL: false,                // Toggle this true if you want the URL to be updated automatically when the user scroll to each page.
+       beforeMove: function(index) {},  // This option accepts a callback function. The function will be called before the page moves.
+       afterMove: function(index) {},   // This option accepts a callback function. The function will be called after the page moves.
+       loop: false,                     // You can have the page loop back to the top/bottom when the user navigates at up/down on the first/last page.
+       keyboard: true,                  // You can activate the keyboard controls
+       responsiveFallback: false,        // You can fallback to normal page scroll by defining the width of the browser in which
+                                        // you want the responsive fallback to be triggered. For example, set this to 600 and whenever
+                                        // the browser's width is less than 600, the fallback will kick in.
+       direction: "vertical"            // You can now define the direction of the One Page Scroll animation. Options available are "vertical" and "horizontal". The default value is "vertical".
+    });
+  </script>
+
+
 </body>
 
 </html>
