--- a/daten.html
+++ b/daten.html
@@ -43,6 +43,11 @@
         Schriften:<br>
         Roboto, Raleway (c) Google Fonts <br><br>
 
+        Div:<br>
+        Favicon: world by ATOM from the Noun Project
+
+        <br><br>
+
         Farben:<br>
         Menü #F0FFF0<br>
         Hintergrund #FFFAFA <br>
@@ -51,7 +56,7 @@
         Grafik 3 #D8E5D8 <br>
         Grafik 4 <br>
         Grafik 5 <br>
-        Grafik 6 <br>
+        Grafik 6
 
         <br><br>
 
@@ -60,6 +65,7 @@
         "Data manipulation in d3.js" (vgl. <a href="https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html" target="_blank">https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html</a>)<br>
         "How TO - Side Navigation" w3schools (vgl. <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp" target="_blank">https://www.w3schools.com/howto/howto_js_sidenav.asp</a>)<br>
         p5.js (vgl. <a href="https://p5js.org/" target="_blank">https://p5js.org/</a>)<br>
+        onepage-scroll (1.3.1 by Pete R., vgl. <a href="https://github.com/peachananr/onepage-scroll" target="_blank">https://github.com/peachananr/onepage-scroll</a>)<br>
 
 
         </p>
