--- a/impressum.html
+++ b/impressum.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html><head>
   <script src="js/p5.min.js"></script>
   <script src="js/p5.dom.min.js"></script>
-  <script src="js/p5.sound.min.js"></script>
   <script src="js/d3.v5.min.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/p5.experience.js"></script>
   <script src="js/p5.experience.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
