--- a/daten.html
+++ b/daten.html
@@ -29,7 +29,7 @@
        </div>
 
        <div class="hintergrund">
-         <h1>DATEN</h1></div>
+         <h1>DATEN</h1>
        <p class="text">Die verwendeten Daten stammen von «Our World in Data»:<br>
         FAQs on Plastics (vgl. <a href="https://ourworldindata.org/faq-on-plastics" target="_blank">https://ourworldindata.org/faq-on-plastics)</a><br>
         Plastic Pollution (vgl. <a href="https://ourworldindata.org/plastic-pollution" target="_blank">https://ourworldindata.org/plastic-pollution)</a><br>
@@ -44,7 +44,8 @@
         Roboto, Raleway (c) Google Fonts <br><br>
 
         Div:<br>
-        Favicon: world by ATOM from the Noun Project
+        Favicon: world by ATOM from the Noun Project<br>
+        Bild “Naturgemälde”: Alexander Humboldt 1807 aus seinem Buch «Ideen zu einer Geographie der Pflanzen nebst einem Naturgemälde der Tropenländer»<br>
 
         <br><br>
 
@@ -70,7 +71,7 @@
 
         </p>
 
-
+        </div>
 
 
        <div class="footer">
