--- a/daten.html
+++ b/daten.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   </head>
   <body>
     <br>
@@ -41,7 +42,7 @@
 
 
         Schriften:<br>
-        Roboto, Raleway (c) Google Fonts <br><br>
+        Lato & Raleway (c) Google Fonts <br><br>
 
         Div:<br>
         Favicon: world by ATOM from the Noun Project<br>
