--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h1>1 PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
       <h2>Wie viel Plastik und Abfall produzieren wir? </h2>
       <p class="text">Waren es 1950 noch «lediglich» weltweit 2 Millionen Tonnen/Jahr, ist die jährliche Produktion 2015 mit 381 Millionen Tonnen/Jahr bereits um das fast 200-fache gestiegen. Dies entspricht etwa der Masse von 2/3 der Weltbevölkerung. Zwischen 1950 – 2015 hat die kumulative Produktion 7.8 Billionen Tonnen Plastik erreicht, mehr als eine Tonne pro lebende Person.</p>
-      <p class="text">Instruktionen: Bearbeiten Sie mit den Slidern jeweils die Skalen der Y-Achse und/oder der X-Achse. Die Aussagen der dargelegten Informationen ändern sich konstant.</p>
+      <p class="text">Instruktion: Bearbeiten Sie mit den Slidern jeweils die Skalen der Y-Achse und/oder der X-Achse. Die Aussagen der dargelegten Informationen ändern sich konstant.</p>
     </div>
     <!-- <style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
     <br><br><br><div id="grafik1" style="position: relative;"></div>
@@ -73,15 +73,30 @@
 
         <!-- GRAFIK 2 -->
     <section><br>
-    <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1></div>
-    <div id="grafik2"></div>
+    <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1>
+    <h2>Globaler Mittelwert der Temperaturanomalität von 1850 - 2018</h2>
+    <p class="text">Es ist ersichtlich, dass die globalen Temperaturen in den letzten Jahrzenten extrem angestiegen sind.</p>
+    <p class="text">Instruktion: Durch den Button «Achsen tauschen» ändern Sie die Werte der Y-Achse (Ausgangslage sind die Jahre 1850 – 2018 als Y-Werte, alternativ die Temperaturanomalitäten in °C).</p></div>
+    <br><div id="grafik2"></div>
     <script src="js/fall2_temp.js"></script></section>
 
         <!-- GRAFIK 3 -->
     <section><br>
-    <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1></div>
+    <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
+    <h2>Plastikverschmutzung (in Tonnen) der Ozeane aus den 20 meist verschmutzenden Flüsse der Welt.</h2>
+    <p class="text">Die Verschmutzung aus diesen 20 Flüssen ist für über zwei Drittel der jährlichen globalen Verschmutzung verantwortlich.</p>
+    <p class="text">Instruktion: Wählen Sie die zu anzeigenden Daten (alle Kontinente, nur Asien, Südamerika oder Afrika) einfach selbst aus. </p></div>
     <div id="grafik3"></div>
     <script id="test" src="js/fall3.js"></script></section>
+
+        <!-- GRAFIK 4 -->
+    <section><br>
+    <div class="hintergrund"><h1>4 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - ACHSENWERTE UMDREHEN</h1>
+    <h2></h2>
+    <p class="text"></p>
+    <p class="text"></p></div>
+    <div id="grafik4"></div>
+    <script id="test" src="js/fall4.js"></script></section>
 
       <!-- GRAFIK 5 -->
     <section><br>
