--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 
         <!-- GRAFIK 4 -->
     <section><br>
-    <div class="hintergrund"><h1>4 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - ACHSENWERTE UMDREHEN</h1>
-    <h2></h2>
+    <div class="hintergrund"><h1>4 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
+    <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
     <p class="text"></p>
-    <p class="text"></p></div>
+    <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
     <div id="grafik4"></div>
     <script id="test" src="js/fall4.js"></script></section>
 
